--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 buildscript {
     ext {
-        kotlin_version = '1.1.3-2'
+        kotlin_version = '1.1.51'
         dokka_version = '0.9.15'
         junit_version = '4.12'
-        metanalysis_version = '0.1.6'
+        metanalysis_version = '0.2.0'
     }
 
     repositories {
@@ -18,17 +18,17 @@ buildscript {
 }
 
 allprojects {
-    group 'org.metanalysis'
-    version '0.1.0'
+    group = 'org.metanalysis'
+    version = '0.2.0'
 
     repositories {
         mavenCentral()
         jcenter()
-        maven { url 'https://jitpack.io' }
+        //maven { url 'https://jitpack.io' }
+        mavenLocal()
     }
 
     apply plugin: 'kotlin'
-    apply plugin: 'org.jetbrains.dokka'
     apply plugin: 'jacoco'
 
     sourceCompatibility = JavaVersion.VERSION_1_7
@@ -40,6 +40,26 @@ allprojects {
         testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
         testImplementation "junit:junit:$junit_version"
     }
+
+    jar {
+        from rootProject.file('LICENSE')
+        from rootProject.file('NOTICE')
+    }
+
+    jacocoTestReport {
+        dependsOn test
+
+        reports {
+            html.enabled = true
+            xml.enabled = true
+            csv.enabled = false
+        }
+    }
+}
+
+subprojects {
+    apply plugin: 'java-library'
+    apply plugin: 'org.jetbrains.dokka'
 
     dokka {
         moduleName = project.name
@@ -53,11 +73,6 @@ allprojects {
             url = "https://github.com/andreihh/${rootProject.name}/blob/master/${project.name}/$dir"
             suffix = "#L"
         }
-    }
-
-    jar {
-        from rootProject.file('LICENSE')
-        from rootProject.file('NOTICE')
     }
 
     task sourcesJar(type: Jar, dependsOn: classes) {
@@ -74,16 +89,15 @@ allprojects {
         archives sourcesJar
         archives javadocJar
     }
+}
 
-    jacocoTestReport {
-        dependsOn test
+apply plugin: 'application'
 
-        reports {
-            html.enabled = true
-            xml.enabled = true
-            csv.enabled = false
-        }
-    }
+mainClassName = 'org.metanalysis.visibility.Main'
+
+dependencies {
+    implementation project(':metanalysis-visibility-core')
+    runtimeOnly project(':metanalysis-visibility-java')
 }
 
 task codeCoverageReport(type: JacocoReport) {
@@ -104,27 +118,3 @@ task codeCoverageReport(type: JacocoReport) {
         csv.enabled = false
     }
 }
-
-subprojects {
-    apply plugin: 'java-library'
-
-    configurations {
-        apiElements {
-            outgoing.variants.getByName('classes').artifact(
-                    file: compileKotlin.destinationDir,
-                    type: ArtifactTypeDefinition.JVM_CLASS_DIRECTORY,
-                    builtBy: compileKotlin
-            )
-        }
-    }
-}
-
-apply plugin: 'application'
-
-mainClassName = 'org.metanalysis.visibility.Main'
-
-dependencies {
-    implementation "com.github.andreihh.metanalysis:metanalysis-core:$metanalysis_version"
-    runtimeOnly project(':metanalysis-visibility-java')
-}
-
