--- a/metanalysis-visibility-java/build.gradle
+++ b/metanalysis-visibility-java/build.gradle
@@ -1,6 +1,5 @@
 dependencies {
     api project(':metanalysis-visibility-core')
 
-    //testImplementation "com.github.andreihh.metanalysis:metanalysis-test:$metanalysis_version"
-    testImplementation "org.metanalysis:metanalysis-test:$metanalysis_version"
+    testImplementation "com.github.andreihh.metanalysis:metanalysis-test:$metanalysis_version"
 }
