--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,8 @@
 buildscript {
     ext {
-        kotlin_version = '1.1.51'
-        dokka_version = '0.9.15'
+        kotlin_version = '1.2.21'
         junit_version = '4.12'
-        metanalysis_version = '0.2.0'
+        metanalysis_version = '0.2.3'
     }
 
     repositories {
@@ -13,28 +12,30 @@ buildscript {
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
     }
 }
 
 allprojects {
     group = 'org.metanalysis'
-    version = '0.2.0'
-
-    repositories {
-        mavenCentral()
-        jcenter()
-        maven { url 'https://jitpack.io' }
-    }
+    version = '0.2.3'
 
     apply plugin: 'kotlin'
     apply plugin: 'jacoco'
 
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+        kotlinOptions.jvmTarget = '1.8'
+    }
+
+    repositories {
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+    }
 
     dependencies {
-        implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
         testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
         testImplementation "junit:junit:$junit_version"
@@ -58,45 +59,15 @@ allprojects {
 
 subprojects {
     apply plugin: 'java-library'
-    apply plugin: 'org.jetbrains.dokka'
-
-    dokka {
-        moduleName = project.name
-        includes = ['Module.md']
-        impliedPlatforms = ['JVM']
-        jdkVersion = 7
-        outputFormat = 'javadoc'
-
-        linkMapping {
-            dir = "src/main/kotlin"
-            url = "https://github.com/andreihh/${rootProject.name}/blob/master/${project.name}/$dir"
-            suffix = "#L"
-        }
-    }
-
-    task sourcesJar(type: Jar, dependsOn: classes) {
-        classifier = 'sources'
-        from sourceSets.main.allSource
-    }
-
-    task javadocJar(type: Jar, dependsOn: dokka) {
-        classifier = 'javadoc'
-        from dokka.outputDirectory
-    }
-
-    artifacts {
-        archives sourcesJar
-        archives javadocJar
-    }
 }
 
 apply plugin: 'application'
 
-mainClassName = 'org.metanalysis.visibility.Main'
+mainClassName = 'org.metanalysis.eb.MainKt'
 
 dependencies {
-    implementation project(':metanalysis-visibility-core')
-    runtimeOnly project(':metanalysis-visibility-java')
+    implementation project(':metanalysis-eb-core')
+    runtimeOnly project(':metanalysis-eb-java')
 }
 
 task codeCoverageReport(type: JacocoReport) {
